--- a/src/containers/HeaderNav/HeaderNav.css
+++ b/src/containers/HeaderNav/HeaderNav.css
@@ -4,6 +4,7 @@
     background-color: teal;
     padding-bottom: 10px;
     padding-top: 10px;
+    box-shadow: 0px 15px 17px -15px rgba(0, 0, 0, 0.5);
 }
 
 .input__form {
